--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "xparthxvorax/larachat",
     "description": "A real-time socket based chat application for Laravel",
     "require": {
-        "php": "^5.6.4",
+        "php": ">=5.6.4",
         "predis/predis": "1.1",
-        "laravel/laravel": "^5.3"
+        "laravel/laravel": ">=5.3"
     },
     "autoload": {
         "psr-4": {
