--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,16 @@
     "name": "xparthxvorax/larachat",
     "description": "A real-time socket based chat application for Laravel",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.0",
         "predis/predis": "1.1",
-        "laravel/laravel": ">=5.3"
+        "illuminate/support": "^5.7",
+        "illuminate/http": "^5.7",  
+        "Illuminate/Console": "^5.7",   
+        "Illuminate/Broadcasting": "^5.7",  
+        "Illuminate/Queue": "^5.7", 
+        "Illuminate/Notifications": "^5.7", 
+        "Illuminate/Contracts": "^5.7", 
+        "Illuminate/Database": "^5.7"
     },
     "autoload": {
         "psr-4": {
