--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,7 @@
     "description": "A real-time socket based chat application for Laravel",
     "require": {
         "php": ">=7.0",
-        "predis/predis": "1.1",
-        "illuminate/support": "^5.7",
-        "illuminate/http": "^5.7",  
-        "Illuminate/Console": "^5.7",   
-        "Illuminate/Broadcasting": "^5.7",  
-        "Illuminate/Queue": "^5.7", 
-        "Illuminate/Notifications": "^5.7", 
-        "Illuminate/Contracts": "^5.7", 
-        "Illuminate/Database": "^5.7"
+        "predis/predis": "1.1"
     },
     "autoload": {
         "psr-4": {
